# qlexEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/engine/: Application.h  Engine.h
include/engine/System/: GUI.h
include/logger/: logger.h
include/maths/: Vector2.h  Vector3.h  utils.h
include/physics/: Circle.h  Shape.h  Shape2D.h  Square.h  Triangle.h
include/physics/Collision/: ContactManifold.h
include/physics/Dynamics/: Circle.h  Rectangle.h  RigidBody.h  Shape2D.h  Square.h  Transform.h  Triangle.h
include/render/: Renderer.h
src/: CMakeLists.txt  main.cpp
src/engine/: Application.cpp  CMakeLists.txt  Engine.cpp
src/render/: CMakeLists.txt  Renderer.cpp
